# cmake-templates

./: .gitmodules  README.md
cmakemodules/: CompilerWarnings.cmake  Documentation.cmake  Doxygen.cmake  StaticAnalyzers.cmake
configs/: Doxyfile.in  clang-format  clang-tidy
executable/: .gitignore  CMakeLists.txt
templates/executable/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
templates/executable/docs/: Doxyfile.in  index.md
templates/executable/src/: CMakeLists.txt  main.cpp  module.cpp  module.h
